# demo-distributed-discounts

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  DOCS.md  Dockerfile  README.md  dev_commands.py  docker-compose.gunicorn.yml  docker-compose.yml  docker-entrypoint.sh  poetry.toml  pyproject.toml
assets/architecture/: 01_auth.drawio  02_fetch_discount_code.drawio  03_generate_discount_codes.drawio
deploy/: gunicorn_config.py
scripts/: initial_data.py
src/app/: __init__.py  auth.py  config.py  middleware.py  models.py
src/app/discounts/: __init__.py  code_fetch.py  code_generation.py  code_generator.py  events.py  exceptions.py  routes.py
src/app/errors/: __init__.py  exceptions.py  handlers.py
src/app/util/: structlog.py
tests/: conftest.py  locustfile.py  test_discounts.py
